[package]
name = "sx12xx"
version = "0.1.2"
authors = ["Louis Thiery <louis@helium.com>"]
edition = "2018"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
license = "Apache 2.0"
readme = "README.md"
description = "Rust Wrapper SX12xx"

[dependencies]
sx12xx-sys = {path = "./sx12xx-sys", version = "0.1.0"}
libm = "0.1.4"

[profile.dev]
opt-level = "s"

[profile.release]
incremental   = false
codegen-units = 1
lto           = true
opt-level     = "s"
