[package]
name = "sx12xx-sys"
version = "0.1.0"
authors = ["Louis Thiery <louis@helium.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
cargo-5730 = "0.2"

[workaround-build-dependencies]
bindgen = {version="=0.49.0", default-features = false }
cc = "1.0"
cmake = { git="https://github.com/alexcrichton/cmake-rs.git", rev="7f85e323c708285eab26e60b9ffe581de85f717a"}

[dependencies]
cty =  "0.2"
libm = "0.1.4"