[package]
name = "sx12xx-sys"
version = "0.1.0"
authors = ["Louis Thiery <louis@helium.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
cargo-5730 = "0.2"
[workaround-build-dependencies]
bindgen = {version="=0.49.0", default-features = false }
cc = "1.0"
cmake = "0.1.44"

[dependencies]
cty =  "0.2"
libm = "0.1.4"